--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,1 @@
-This is a code to detect credit card fraud using supervisied learning. Along with it a csv file is also given
+This is a code to detect credit card fraud using supervisied learning. Along with it a zip file is given in which a csv file is also given
